no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -499,6 +499,7 @@ unicorn/expiring-todo-comments   ##Avoid comments like TODO|FIXME unless they ar
                                  ##  - terms STR_ARR (def: ['todo', 'fixme', 'xxx'])
                                  ##  - allowWarningComments BOOL (def: true): if false, disable "no-warning-comments" rule
                                  ##  - ignoreDatesOnPullRequests BOOL (def: false): disable YYYY-MM-DD when it's a PR
+                                 ##  - ignore STR|REGEXP_ARR
 
 eslint-comments/*                ##Module "eslint-plugin-eslint-comments" (3.1.2)
 eslint-comments/                 ##Every /* eslint-disable */ must be followed by a /* eslint-enable */
@@ -1539,6 +1540,7 @@ unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, .
 
 no-array-constructor              #Avoids [new] Array(VAL,...)
                                   #[new] Array(NUM) is still allowed
+unicorn/prefer-set-has            #Prefer SET.has() over ARR.includes()
 
 
                                              /=+===============================+=\
@@ -1559,7 +1561,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (17.2.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (18.0.1)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
@@ -1630,6 +1632,7 @@ prefer-numeric-literals           #Avoid parseInt(STR, 2|8|16) when 0b... 0o... 
 radix [STR]                       #With parseInt(..., RADIX):
                                   #  - STR 'always' (def): require RADIX
                                   #  - STR 'as-needed': forbid RADIX if 10
+prefer-number-properties          #Use 'Number.' in front of parseInt|parseFloat|isNaN|isFinite|NaN
 
 use-isnan [OBJ]                   #Must test NaN with [Number.]isNaN()
                                   #OBJ:
