no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.11.0 (current), 12.16.1 (active LTS), 10.19.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #13.12.0 (current), 12.16.1 (active LTS), 10.19.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -336,6 +336,9 @@ GLOBAL VARIABLES ==>                            #  - global|globalThis|GLOBAL|ro
 
 require('timers')                               #Module for clear|setImmediate|Interval|Timeout
                                                 #Prefer globals as they work on browsers too
+
+--disable-proto=STR                          12*#Disallow OBJ.__proto__ (often used for security vulnerabilities)
+                                             12*#STR is 'throw' (throw on access) or 'delete' (remove it)
 
 
                                              /=+===============================+=\
@@ -2782,7 +2785,9 @@ MULTI-THREADING ==>                             #Uses threads not processes, i.e
                                                 #I.e. good for CPU-intensive tasks (not I/O intensive)
 
 
-new Worker('SCRIPT_PATH'[, OPTS])               #OPTS:
+new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH'
+                                             12*#or URL with file: scheme
+                                                #OPTS:
                                                 #  - eval BOOL (def: false): use inline 'JAVASCRIPT' instead
                                                 #  - workerData VAL:
                                                 #     - assigned to WORKER_THREADS.workerData VAL
@@ -3443,6 +3448,7 @@ promisify(FUNC(..., FUNC2(ERROR, VAL)))->FUNC   #Transform FUNC so FUNC(...)->PR
                                                 #If FUNC[util.promisify.custom] FUNC3 is defined, returns FUNC3 instead.
                                                 #  - this is defined for setTimeout|setImmediate(), i.e. can be used even
                                                 #    though callback is first parameter
+                                             12*#  - util.promisify.custom is also Symbol.for('nodejs.util.promisify.custom')
 callbackify(FUNC()->PROMISE)
  ->FUNC(..., FUNC2(ERROR, VAL))                 #Inverse. FUNC will not return PROMISE anymore
 
@@ -3495,6 +3501,7 @@ types.isExternal(VAL)->BOOL                     #True if external C/C++ value
 
 
 --experimental-report                        11*#Must be used
+                                             12*#Does not need to be used
 
 process.report.getReport([ERROR])->OBJ       11*#Get debugging information.
                                              11*#Def ERROR is new Error()
@@ -3575,6 +3582,8 @@ process.report.directory
 --report-directory DIR                       11*#Def: '', i.e. process.cwd()
 process.report.filename                      11*#'FILENAME|stdout|stderr'
 --report-filename STR                        11*#Def: '', i.e. 'report.YYYYMMDD.HHMMSS.PID.COUNTER.json'
+process.report.compact
+--report-compact                             12*#Use JSON.stringify(VAL) instead of JSON.stringify(VAL, null, 2)
 
 process.report.reportOnUncaughtException
 --report-uncaught-exception                  11*#BOOL (def: false). Call writeReport() on uncaught exception
