no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -906,6 +906,10 @@ VAL && VAL2                                     #Same as VAL ? VAL : VAL2
 VAL || VAL2                                     #Same as VAL ? VAL2 : VAL
 VAL ?? VAL2                                  *-|#Same as VAL == null ? VAL : VAL2
 
+VAR &&= VAL2                                *-|~#Same as VAR = VAR && VAL2
+VAR ||= VAL2                                *-|~#Same as VAR = VAR || VAL2
+VAR ??= VAL2                                *-|~#Same as VAR = VAR ?? VAL2
+
 VAL1, VAL2                                      #Evaluates both, but returns VAL2.
                                                 #Use case: in for or while loops.
 
@@ -1247,8 +1251,20 @@ new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
                                             -|||#OPTS:
                                             -|||#  - style 'decimal|currency|percent' (def: 'decimal')
                                          12*-|||#    or 'unit'
-                                            -|||#  - useGrouping BOOL (def: true): throusands separators
+                                            -|||#  - useGrouping BOOL (def: auto): throusands separators
+                                          *-|||~#    Can also be:
+                                          *-|||~#      - 'never|always' (like false|true)
+                                          *-|||~#      - 'auto' (def): depends on locale
+                                          *-|||~#      - 'min2': if at least two digits in each group
                                             -|||#  - minimum|maximumInteger|Fraction|SignificantDigits NUM
+                                          *-|||~#  - fractionDigits NUM: set both minimum|maximumFractionDigits
+                                          *-|||~#  - precision 'one' (def) or 'nickel'
+                                          *-|||~#  - scale NUM (def: -2 if 'unit', 0 otherwise): multiply by 1eNUM
+                                          *-|||~#  - roundingMode STR:
+                                          *-|||~#     - 'halfUp' (def) or 'halfDown': closest. If half, up|down
+                                          *-|||~#     - 'halfEven'
+                                          *-|||~#     - 'ceiling|floor': towards +|-Infinity
+                                          *-|||~#     - 'up|down': away|towards 0
                                          12*-|||#  - signDisplay 'auto' (def) (-1|-0|0|1), 'always' (-1|-0|+0|+1),
                                          12*-|||#    'never' (1|0|0|1), 'exceptZero' (-1|-0|0|+1)
                                          12*-|||#  (for style 'decimal')
@@ -1284,7 +1300,8 @@ new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
                                          12*-|||#       gallon[-imperial]|[milli|centi|deci|hecto|mega]liter|pint[-metric]|quart|tablespoon|teaspoon
                                          12*-|||#  - unitDisplay 'narrow', 'short' or 'long'
                                             -|||#Relevant LOCALE_ARGS: nu
-NUMBERFORMAT.format(NUM|BIGINT)->STR        -|||#
+NUMBERFORMAT.format(ARG)->STR               -|||#ARG is NUM|BIGINT
+                                          *-|||~#or STR
 NUM|BIGINT.toLocaleString([LOCALEOPTS])->STR-|||#
 NUMBERFORMAT.formatToParts(NUM|BIGINT)      -|||#OBJ_ARR:
  ->OBJ_ARR                                  -|||#  - type STR:
@@ -1297,6 +1314,12 @@ NUMBERFORMAT.formatToParts(NUM|BIGINT)      -|||#OBJ_ARR:
                                             -|||#     - 'infinity|nan': ∞ or NaN
                                             -|||#     - 'literal': anything else, e.g. spaces
                                             -|||#  - value STR
+NUMBERFORMAT.formatRange
+ (NUM|BIGINT, NUM|BIGINT2)->STR           *-|||~#Like format() but for range between two NUMs ('USD3-5')
+NUMBERFORMAT.formatRangeToParts
+ (NUM|BIGINT, NUM|BIGINT2)->OBJ_ARR       *-|||~#Like formatToParts() but for range. OBJ has extra member source 'startRange|endRange|shared'
+NUMBERFORMAT.format[Range][ToParts]Select *-|||~#Like format[Range][ToParts](...) but returns an OBJ: string (singular), pluralForm
+ (...)                                    *-|||~#similar to Intl.PluralRules
 
 new Intl.DateTimeFormat([LOCALEOPTS])       -|||#Date|Time|Date+Time locale formatting.
                                             -|||#OPTS:
@@ -1314,13 +1337,13 @@ new Intl.DateTimeFormat([LOCALEOPTS])       -|||#Date|Time|Date+Time locale form
 DATETIMEFORMAT.format(DATE)->STR            -|||#
 DATE.toLocale[Date|Time]String([LOCALOPTS])
  ->STR                                      -|||#
-DATETIMEFORMAT.formatToParts(DATE)          -|||Same but returned as OBJ_ARR:
+DATETIMEFORMAT.formatToParts(DATE)->OBJ_ARR -|||#Same but returned as OBJ_ARR:
                                             -|||#  - type 'era|year|month|weekday|day|hour|minute|second|timeZoneName|separator'
                                             -|||#  - value STR
 DATETIMEFORMAT.formatRange
  (DATE, DATE2)->STR                     12*-|||~#Like format() but for range between two DATEs ('1/10/07, 10:00 AM – 1/20/07, 10:00 AM')
 DATETIMEFORMAT.formatRangeToParts
- (DATE, DATE2)->STR                     12*-|||~#Like formatToParts() but for range. OBJ has extra member source 'startRange|endRange|shared'
+ (DATE, DATE2)->OBJ_ARR                 12*-|||~#Like formatToParts() but for range. OBJ has extra member source 'startRange|endRange|shared'
 
 new Intl.RelativeTimeFormat([LOCALEOPTS])  *-|||#Date|Time|Date+Time locale formatting, for relative time ("time ago")
                                            *-|||#OPTS:
@@ -1971,36 +1994,36 @@ Reflect.*(OBJ, ...)                           -|#Does same thing as what Proxy O
                                              \=+===============================+=/
 
 
-ES MODULES DIFFERENCES ==>                   *-|#Implies 'use strict'
-                                             *-|#Variables are file-scoped
-                                             *-|#Because of those differences, must use export {} if nothing is exported, since
-                                             *-|#without import|export keyword, cannot distinguish.
+ES MODULES DIFFERENCES ==>                 12*-|#Implies 'use strict'
+                                           12*-|#Variables are file-scoped
+                                           12*-|#Because of those differences, must use export {} if nothing is exported, since
+                                           12*-|#without import|export keyword, cannot distinguish.
 
-export QUAL VAR = VAL[, ...]                 *-|#
-export function VAR(...){...}                *-|#
-export class CLASS { ... }                   *-|#
-export { VAR[ as VAR2], ... }                *-|#Specific VAR ("named export")
+export QUAL VAR = VAL[, ...]               12*-|#
+export function VAR(...){...}              12*-|#
+export class CLASS { ... }                 12*-|#
+export { VAR[ as VAR2], ... }              12*-|#Specific VAR ("named export")
 export { VAR as default, ... }
-export default VAL                           *-|#Default VAR ("default export"). Is just a named export called "default".
-export {}                                    *-|#Do not export anything (i.e. not an empty object)
+export default VAL                         12*-|#Default VAR ("default export"). Is just a named export called "default".
+export {}                                  12*-|#Do not export anything (i.e. not an empty object)
 export {} from "MDL"
 export {...} from "MDL"
-export ... from "MDL"                        *-|#Same as import ... from "MDL", then multiple export
+export ... from "MDL"                      12*-|#Same as import ... from "MDL", then multiple export
 
-import { VAR[ as VAR2], ... } from "MDL"     *-|#Specific VAR
-import * as VAR2 from "MDL"                  *-|#All VARs, including "default"
+import { VAR[ as VAR2], ... } from "MDL"   12*-|#Specific VAR
+import * as VAR2 from "MDL"                12*-|#All VARs, including "default"
 import { default as VAR2, ... } from "MDL"
-import VAR[, ...] from "MDL"                 *-|#"default" VAR. Can be combined, e.g. import VAR, {...} from "MDL"
+import VAR[, ...] from "MDL"               12*-|#"default" VAR. Can be combined, e.g. import VAR, {...} from "MDL"
 import {} from "MDL"
-import "MDL"                                 *-|#Do not import the variable, just execute the file
+import "MDL"                               12*-|#Do not import the variable, just execute the file
 
-import("MDL")->PROMISE(OBJ)                 *-||#As opposed to above, not static (dynamic), i.e. does not have to be top-level
+import("MDL")->PROMISE(OBJ)                12*-|#As opposed to above, not static (dynamic), i.e. does not have to be top-level
 
-CIRCULAR DEPENDENCIES ==>                    *-|#Accessing circular properties during file loading throws an error.
-                                             *-|#But accessing them later works.
+CIRCULAR DEPENDENCIES ==>                  12*-|#Accessing circular properties during file loading throws an error.
+                                           12*-|#But accessing them later works.
 
-import.meta.url                           *-~|||#Current file absolute path, as file:// URL
-                                          *-~|||#Polyfill babel-plugin-bundled-import-meta
+import.meta.url                          12*-|||#Current file absolute path, as file:// URL
+                                         12*-|||#Polyfill babel-plugin-bundled-import-meta
 
 <script>
   type="module"                              *-|#Must be specified in browser to use modules.
