no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1298,7 +1298,7 @@ unicorn/custom-error-definition  ##Proper ERROR subclassing, i.e.:
 
 
 func-style [STR] [OBJ]            #Whether FUNC should be STR 'expression' (def) or 'declaration'
-                                  #OBJ: allowArrowFunctions BOOL (def: true)
+                                  #OBJ: allowArrowFunctions BOOL (def: false), only with 'declaration'
 unicorn/no-fn-reference-in-
  iterator                        ##Prefer OBJ|ARR.FUNC(VAL => FUNC2(VAL)) over OBJ|ARR.FUNC(FUNC2)
 
