no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1999,7 +1999,7 @@ no-restricted-imports             #Avoid import ... from 'MDL' using blacklisted
  ...STR_ARR|OBJ_ARR               #Can also be OBJ:
                                   #  - paths STRM_ARR: full path
                                   #     - can also usse STRM.importNames 'VAR'_ARR to disallow specific exported variables
-                                  #  - patterns STR_ARR: globbing patterns (including globstar)
+                                  #  - patterns STR_ARR: globbing patterns (including globstar) and !GLOB
 no-restricted-exports [OBJ]       #Avoid export ... from 'MDL' using blacklisted OBJ.restrictedNamedExports STR_ARR
                                   #STR_ARR can include 'default'
 node/no-restricted-require        #Avoid require('CORE_MODULE') from blacklisted ones
