no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -426,7 +426,7 @@ VAR &&= ||= ??= VAL          (bl)*#    or '&&=|||=|??='
 
 VAL || && VAL2                    #Child of EXPR, type 'LogicalExpression':
                                   #  - operator '|||&&'
-VAL ?? VAL2                  (bl)*#   or '??'
+VAL ?? VAL2                   (bl)#   or '??'
                                   #  - left EXPR
                                   #  - right EXPR
 
