no commit message

--- a/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
+++ b/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - jscpd (prefered): multi-languages
                                   #  - jsinspect: JavaScript-only, does not always work correctly
                                   #  - synt: less options, TypeScript-oriented, less popular
 
-VERSION ==>                       #3.1.0
+VERSION ==>                       #3.2.0
 
 GOAL ==>                          #Detect code duplication:
                                   #  - tokenize with Prism.js
@@ -133,6 +133,8 @@ CONF.mode                         #Can be:
 CONF.ignoreCase                   #BOOL (def: false). Ignore token case.
 
 CONF.noSymlinks                   #BOOL (def: false). Do not follow symlinked directories.
+
+CONF.skipLocal                    #'DIR'_ARR. Only report duplicates between different DIRs
 
 CONF.storeOptions.NAME            #How intermediary values are stored. OBJ:
                                   #  - type:
