no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.12.0 (current), 12.16.1 (active LTS), 10.19.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #13.12.0 (current), 12.16.2 (active LTS), 10.20.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -774,8 +774,10 @@ BUFFER.writeFloat|Double|[U]Int8|16|32LE|BE     #  - use LE|BE instead of BOOL a
 (VAL, UINT[, BOOL])                             #  - if BOOL true, faster but no validation of UINT buffer overflow
 BUFFER.read[U]Int[LE|BE](UINT, UINT2[, BOOL])
 BUFFER.write[U]Int[LE|BE](VAL,UINT,UINT2[,BOOL])#Same but specifies [U]Int size UINT2 (up to 48)
-BUFFER.readBig[U]Int64LE|BE(UINT)->BIGINT    12*#
-BUFFER.readBig[U]Int64LE|BE(BIGINT, UINT)    12*#
+BUFFER.readBig[U]Int64LE|BE
+ (UINT)->BIGINT                         10.20.0*#
+BUFFER.readBig[U]Int64LE|BE
+ (BIGINT, UINT)                         10.20.0*#
 
 BUFFER.swap16|32|64()->BUFFER                   #Swaps every couple of 1|2|4 bytes. Return value is reference
 
@@ -1397,7 +1399,7 @@ TLS.createSecureContext(OBJ)->SECURECONTEXT     #OBJ:
                                                 #  - secureOptions { CRYPTO.SSL_OP_*: VAL }: OpenSSL options
                                                 #  - min|maxVersion 'TLSv1[.1|2|3]'
                                                 #     - def: TLS.DEFAULT_MIN|MAX_VERSION (def: 'TLSv1.2|3')
-                                             12*#     - can be set with --tls-min|max-v1.0|1|2|3
+                                        10.20.0*#     - can be set with --tls-min|max-v1.0|1|2|3
                                              11*#     - TLSv1.3 only for Node >=11
                                              12*#  - enableTrace BOOL (def: false): print TLS packets to stderr, for debuggin
                                              12*#  - hints NUM: like DNS.lookup()
@@ -1513,9 +1515,9 @@ TLSSOCKER.exportKeyingMaterial
 TLSSOCKET.enableTrace()                      12*#Same as SECURECONTEXT.enableTrace
 
 TLSSERVER.on
- ('keylog', FUNC(BUFFER, TLSSOCKET))         12*#TLS key in NSS SSLKEYLOGFILE format. Usually used with Wireshark to decrypt SSL traffic.
-TLSSOCKER.on('keylog', FUNC(BUFFER))         12*#Can be emitted multiple times: concatenation of BUFFER is the whole file.
---tls-keylog=FILE                            12*#Same but written to a file
+ ('keylog', FUNC(BUFFER, TLSSOCKET))    10.20.0*#TLS key in NSS SSLKEYLOGFILE format. Usually used with Wireshark to decrypt SSL traffic.
+TLSSOCKER.on('keylog', FUNC(BUFFER))    10.20.0*#Can be emitted multiple times: concatenation of BUFFER is the whole file.
+--tls-keylog=FILE                       10.20.0*#Same but written to a file
 
 
                                              /=+===============================+=\
