no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1950,6 +1950,8 @@ resolve('PATH',...)->'PATH2'                    #Like doing several cd 'PATH' fr
                                                 #  - 'PATH2' is final DIR, normalized()
 relative('PATH', 'PATH2')->'PATH3'              #Print relative PATH3 to go from dir PATH to dir PATH2.
                                                 #Return '' if same dir
+                                                #On Windows, PATH3 might be absolute if either different root folder or drive.
+                                                #On Windows, PATH3 might start with Windows drive if different.
 
 isAbsolute('PATH')->BOOL                        #
 
