no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1969,7 +1969,7 @@ node/shebang [OBJ]               ##Make sure binaries specified in package.json 
 compat/compat                    ##Avoid features unsupported by browsers, using current browserslist conf (see its doc)
                                  ##Can whitelist some features with CONF.settings.polyfills 'FEATURE_NAME'_ARR
                                  ##(see caniuse for what is "FEATURE_NAME").
-                                 ##Node module 'eslint-plugin-compat' (3.5.1)
+                                 ##Node module 'eslint-plugin-compat' (3.6.0-0)
 
 node/no-unsupported-features/TYPE##No JavaScript features unsupported for a given Node.js version
  [OBJ]                           ##OBJ:
@@ -2120,7 +2120,7 @@ no-obj-calls                      #Avoid Math(), JSON(), Reflect(), Atomics() (t
                                              \=+===============================+=/
 
 
-html/*                           ##Node module 'eslint-plugin-html' (6.0.1)
+html/*                           ##Node module 'eslint-plugin-html' (6.0.2)
                                  ##Allows parsing inside HTML|XML, but must adjust eslint --ext
                                  ##CONF.settings:
                                  ##  - html/html-extensions '.EXT'_ARR (def: .erb, .handlebars, .hbs, .htm, .html,
