no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1550,9 +1550,10 @@ HTTPSERVER.on("clientError",FUNC(ERR,TCPSOCKET))#Fired on connection problem.
                                                 #  - bytesParsed NUM
                                                 #  - rawPacket BUFFER
 
-HTTPSERVER|REQ.maxHeadersCount                  #Maximum number of headers incoming (def: 1000, 0 for unlim)
+HTTPSERVER|REQ.maxHeadersCount                  #Maximum number of headers incoming (def: 2000, 0 for unlim)
 HTTPSERVER.maxHeaderSize
---max-http-header-size NUM                      #Def: 8KB. If above, fires 'clientError'.
+--max-http-header-size NUM                      #Def: 16KB. If above, fires 'clientError'.
+                                            <13*#Def: 8KB
                                              12*#If no 'clientError' handler, returns 431.
 
 RES|CLIENTREQ.setTimeout(UINT[, FUNC()])        #Call underlying TCPSOCKET.*
@@ -1823,6 +1824,7 @@ lookup('HOST'[, OBJ], FUNC(ERROR, 'HOST', STR4))#DNS forward lookup.
                                                 #  - hints NUM: or'd flags among:
                                                 #     - DNS.ADDRCONFIG
                                                 #     - DNS.V4MAPPED: if look for IPv6 but none found, return IPv4 mapped as IPv6
+                                             13*#     - DNS.ALL: with V4MAPPED, also return IPv6 too
                                                 #  - all BOOL: if true (def: false), return all address as STR4_ARR, not only first one
                                                 #  - verbatim BOOL: if false (def), reorder IPv4 before IPv6
                                                 #The ERROR.name can correspond to several DNS.*, like DNS.NOTFOUND, DNS.NODATA, DNS.NOMEM, etc. (see online doc)
@@ -2161,6 +2163,8 @@ read(FD_INT[, OPTS],FUNC(ERROR,INT2,BUFFER)) 13*#Read INT2 bytes from file FD_IN
                                              13*#  - offset INT (def: 0)
                                              13*#  - length INT2 (def: OPTS.buffer.length)
                                              13*#  - position INT3 (def: null)
+readv(FD_INT, ARRAYBUFFERVIEW[, INT3]
+ FUNC(ERROR, INT4, ARRAYBUFFERVIEW_ARR))     13*#Same but with ARRAYBUFFERVIEW_ARR
 f[data]sync(FD_INT, FUNC(ERROR))                #Flushes to disk
                                                 #If 'data', does not flush metadata (e.g. mtime)
 
@@ -2796,6 +2800,9 @@ new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH'
                                                 #  - workerData VAL:
                                                 #     - assigned to WORKER_THREADS.workerData VAL
                                                 #     - same possible types as postMessage()
+                                             13*#  - transferList VAL:
+                                             13*#     - with OPTS.workerData, the VAL2_ARR connected to it
+                                             13*#       (like postMessage(OPTS.workerData, OPTS.transferList))
                                              12*#  - argv STR_ARR: process.argv
                                              12*#     - same possible types as postMessage()
                                              11*#  - execArgv STR_ARR (def: process.execArgv)
@@ -3402,6 +3409,8 @@ inspect(VAL[, OBJ])                             #Print function used by repl. Re
                                                 #  - depth NUM (def: 2): max recursion (null|Infinity for infinite)
                                       11.0-11.3*#    Def: 20
                                                 #  - maxArrayLength NUM (def: 100) (null for infinite)
+                                             13*#  - maxStringLength NUM (def: Infinity) (Infinity|null for infinite):
+                                                #    truncate any STR with ellipsis
                                                 #  - breakLength NUM (def: 60) (can be Infinity): maxlength to print OBJ in multiline
                                                 #  - compact BOOL|NUM:
                                                 #     - if false:
