no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.12.0 (current), 12.16.2 (active LTS), 10.20.1 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #13.13.0 (current), 12.16.2 (active LTS), 10.20.1 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -324,7 +324,7 @@ EventEmitter.errorMonitor                    12*#Special 'EVENT' that behaves li
                                              \=+===============================+=/
 
 
-GLOBAL VARIABLES ==>                            #  - global|globalThis|GLOBAL|root: global scope reference
+GLOBAL VARIABLES ==>                            #  - global|globalThis: global scope reference
                                                 #  - clear|setImmediate|Interval|Timeout, Object, URL, console, encodeURI, WebAssembly, etc.: JavaScript globals
                                                 #  - module, require, exports, __filename, __dirname: CommonJS globals
                                                 #  - process, url: core modules
@@ -1686,7 +1686,7 @@ CLIENTREQ.on
 CLIENTREQ.abort()                               #
 CLIENTREQ.on('abort', FUNC())                   #Aborted by client, i.e. CLIENTREQ.abort()
 CLIENTREQ.on('aborted', FUNC())                 #Aborted by server
-CLIENTREQ.flushHeaders()                        #Like REQ.flush()
+CLIENTREQ.flushHeaders()                        #Send request headers right away, even if request body not ready for send yet
 
 AGENT                                           #Socket pools manager for CLIENTREQ (not REQ|RES)
 new AGENT(OBJ)                                  #OBJ is:
@@ -2255,7 +2255,6 @@ FS.promises                                     #Like FS but:
                                                 #  - FD_INT are FILE_HANDLE instead
                                                 #     - no FS.close() but FILE_HANDLE.close() is available
                                                 #  - FS.constants|Stats|*OK remain on FS.*
-                                                #No more experimental warning
 FILE_HANDLE                                     #Abstraction of a file descriptor, with automatic closing on FS PROMISE rejection
 FILE_HANDLE.fd                                  #FD_INT
 FILE_HANDLE.FUNC(...)                           #Same as FSP.[f]FUNC(FILE_HANDLE, ...)
@@ -2523,7 +2522,7 @@ getgroups()
 setgroups(STR_ARR)                              #Supplementary GIDs.
 initgroups(STR, STR2[_ARR])                     #
 
-umask([UINT])                                   #See below for Windows behavior
+umask(UINT)                                     #See below for Windows behavior
 
 version                                         #Node.js version 'vSERMVER'
 release.name                                    #'node|io.js'
@@ -2820,7 +2819,7 @@ new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH'
 global.*                                        #In worker, like in parent except process.*:
                                                 #  - exit() affects current thread not current process
                                                 #  - no abort|chdir|initgroups|set*|umask(VAL)|on('SIGNAL')
-                                            <11*#     - no execArgv|umask()
+                                            <11*#     - no execArgv
                                             <13*#     - no report.*
                                                 #  - env|title are read-only
                                                 #Worker and parent's global|process.* are distinct.
@@ -3234,6 +3233,7 @@ ASSERT.strict.*(...)                            #Same as ASSERT.*(...) except:
 ASSERT.fail()                                   #Always fails
 
 ASSERT.[not]equal(VAL, VAL2)                    #VAL == VAL2
+                                             14*#or both NaN
 ASSERT.[not]strictEqual(VAL, VAL2)              #Object.is(VAL, VAL2)
 ASSERT.[not]deepStrictEqual(VAL, VAL2)          #UTIL.isDeepStrictEqual()
 
@@ -3524,14 +3524,14 @@ process.report.getReport([ERROR])->OBJ       11*#Get debugging information.
                                              12*#     - reportVersion 1
                                              11*#     - trigger:
                                              11*#        - 'GetReport': manual call to getReport()
-                                             11*#        - 'OnUncaughtException': --diagnostic-report-uncaught-exception
-                                             11*#        - 'OnFatalError': --diagnostic-report-on-fatalerror
-                                             11*#        - 'OnUserSignal': --diagnostic-report-on-signal
+                                             11*#        - 'OnUncaughtException': --report-uncaught-exception
+                                             11*#        - 'OnFatalError': --report-on-fatalerror
+                                             11*#        - 'OnUserSignal': --report-on-signal
                                              11*#     - event STR:
                                              11*#        - 'JavaScript API': manual call to getReport()
-                                             11*#        - 'exception': --diagnostic-report-uncaught-exception
-                                             11*#        - 'ERROR_MESSAGE': --diagnostic-report-on-fatalerror
-                                             11*#        - 'SIGNAL': --diagnostic-report-on-signal
+                                             11*#        - 'exception': --report-uncaught-exception
+                                             11*#        - 'ERROR_MESSAGE': --report-on-fatalerror
+                                             11*#        - 'SIGNAL': --report-on-signal
                                              11*#     - filename 'FILENAME'|null: where file was dumped
                                              11*#     - dumpEventTime 'DATE'
                                              11*#     - dumpEventTimeStamp DATE_NUM
